# InsightQA

./: README.md  insightqa.db  pyproject.toml
assets/e21404fe-69c6-4ef2-85c4-3ced9b7fd9a4/: api_notes.json  checkout.html  discount_rules.txt  functional_requirements.md  payment_flow.md
backend/: .dockerignore  Dockerfile  app.py  db.py  embeddings.py  llm_ollama.py  parsers.py  rag_agent.py  requirements.txt  selenium_generator.py  vectordb.py  voyagetest.py
chroma_db/: chroma.sqlite3
streamlit_ui/: app.py
