[project]
name = "insightqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.5",
    "fastapi>=0.122.0",
    "numpy>=2.2.6",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
    "webdriver-manager>=4.0.2",
]
